creating my homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html>
-<header><title>This is title</title></header>
+<head>
+<meta charset="UTF-8">
+<title>Curtis's home page</title>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+
 <body>
-Hello world
+<ul id="menu">
+    <li><a href="Index.html">About me</a></li>
+</ul>
+
+<table width="800" border="0" cellpadding="10" align="center">
+  <tbody>
+    <tr>
+      <td>My name is Curtis, I major in software engineering. I am currently working for the </br>Church of Jesus Christ of Latter Day Saints at Temple Square at Family research department.</td>
+      <td><img src="images/myself.jpg" alt="" width="300" height="451" class="myself"></td>
+      <td>I have lots of interest, i love sports. Basketball, tennis, hocky, volley ball etc. I like to solve problems and i have so much patient to find bugs in a program.</td>
+    </tr>
+  </tbody>
+</table>
+
+<footer>
+<address> Welcome to Curtis's homepage</address>
+</footer>
 </body>
 </html>
