--- a/Assignments.html
+++ b/Assignments.html
@@ -11,6 +11,7 @@
     <li><a href="index.html">About me</a></li>
     <li><a href="Assignment.html">Assignments</a></li>
 </ul>
+<li><center><a href="week04.html">Week 03</a></center></li>
 <center>Coming soon</center>
 </body>
 </html>
