--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <ul id="menu">
     <li><a href="index.html">About me</a></li>
-    <li><a href="Assignment.html">Assignments</a></li>
+    <li><a href="Assignments.html">Assignments</a></li>
 </ul>
 
 <table width="800" border="0" cellpadding="10" align="center">
