--- a/week03.html
+++ b/week03.html
@@ -12,16 +12,16 @@
             <input type="radio" name="happy" value="No">No<br/>
             <br/>
             Do you suffer from hunger all the time?<br/>
-            <input type="checkbox" name="hunger" value="Yes">Yes<br/>
-            <input type="checkbox" name="hunger" value="No">No<br/>
+            <input type="radio" name="hunger" value="Yes">Yes<br/>
+            <input type="radio" name="hunger" value="No">No<br/>
             <br/>
             Do you own a car?<br/>
-            <input type="checkbox" name="car" value="Yes">Yes<br/>
-            <input type="checkbox" name="car" value="No">No<br/>
+            <input type="radio" name="car" value="Yes">Yes<br/>
+            <input type="radio" name="car" value="No">No<br/>
             <br/>
             Are you a student?<br/>
-            <input type="checkbox" name="student" value="Yes">Yes<br/>
-            <input type="checkbox" name="student" value="No">No<br/>
+            <input type="radio" name="student" value="Yes">Yes<br/>
+            <input type="radio" name="student" value="No">No<br/>
             <br/>
             <input type="submit" value="Submit">
         </form>
