--- a/week03.html
+++ b/week03.html
@@ -25,6 +25,7 @@
             <br/>
             <input type="submit" value="Submit">
         </form>
+        <li><a href="result.php">To result</a></li>
 
 </body>
 </html>
