--- a/week03.html
+++ b/week03.html
@@ -8,20 +8,20 @@
 <body>
 <form action="result.php" method="post" >
             Are you happy?:<br/>
-            <input type="radio" name="happy" value="Yes">Yes<br/>
-            <input type="radio" name="happy" value="No">No<br/>
+            <input type="radio" name="happy" value="1">Yes<br/>
+            <input type="radio" name="happy" value="0">No<br/>
             <br/>
             Do you suffer from hunger all the time?<br/>
-            <input type="radio" name="hunger" value="Yes">Yes<br/>
-            <input type="radio" name="hunger" value="No">No<br/>
+            <input type="radio" name="hunger" value="1">Yes<br/>
+            <input type="radio" name="hunger" value="0">No<br/>
             <br/>
             Do you own a car?<br/>
-            <input type="radio" name="car" value="Yes">Yes<br/>
-            <input type="radio" name="car" value="No">No<br/>
+            <input type="radio" name="car" value="1">Yes<br/>
+            <input type="radio" name="car" value="0">No<br/>
             <br/>
             Are you a student?<br/>
-            <input type="radio" name="student" value="Yes">Yes<br/>
-            <input type="radio" name="student" value="No">No<br/>
+            <input type="radio" name="student" value="1">Yes<br/>
+            <input type="radio" name="student" value="0">No<br/>
             <br/>
             <input type="submit" value="Submit">
         </form>
