--- a/Assignments.html
+++ b/Assignments.html
@@ -12,6 +12,7 @@
     <li><a href="Assignment.html">Assignments</a></li>
 </ul>
 <li><center><a href="week03.html">Week 03</a></center></li>
+<li><center><a href="week04.php">Week 04</a></center></li>
 <center>Coming soon</center>
 </body>
 </html>
