--- a/Assignments.html
+++ b/Assignments.html
@@ -9,10 +9,10 @@
 <body>
 <ul id="menu">
     <li><a href="index.html">About me</a></li>
-    <li><a href="Assignment.html">Assignments</a></li>
+    <li><a href="Assignments.html">Assignments</a></li>
 </ul>
 <li><center><a href="week03.html">Week 03</a></center></li>
-<li><center><a href="week04.php">Week 04</a></center></li>
+<li><center><a href="week04.php">Look at my skills!</a></center></li>
 <center>Coming soon</center>
 </body>
 </html>
